--- a/Bakery/Bakery.csproj
+++ b/Bakery/Bakery.csproj
@@ -141,20 +141,20 @@
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\WorkspacesModel.cs" />
-    <Compile Include="ViewModels\CommandViewModel.cs" />
+    <Compile Include="ViewModels\CommandVM.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Compile Include="ViewModels\Base\ViewModelBase.cs" />
     <Compile Include="ViewModels\Base\WorkspaceViewModel.cs" />
-    <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\ProductSpecificationAddEditViewModel.cs" />
-    <Compile Include="ViewModels\ProductSpecificationsViewModel.cs" />
-    <Compile Include="ViewModels\UserAuthWindowViewModel.cs" />
-    <Compile Include="ViewModels\UserRegWindowViewModel.cs" />
-    <Compile Include="Views\Workspaces\ProductSpecificationAddEditView.xaml.cs">
-      <DependentUpon>ProductSpecificationAddEditView.xaml</DependentUpon>
+    <Compile Include="ViewModels\ProdSpecsVM.cs" />
+    <Compile Include="ViewModels\UserAuthWindowVM.cs" />
+    <Compile Include="ViewModels\UserRegWindowVM.cs" />
+    <Compile Include="Views\Workspaces\ProdSpecsAddEditView.xaml.cs">
+      <DependentUpon>ProdSpecsAddEditView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Workspaces\ProductSpecificationsView.xaml.cs">
-      <DependentUpon>ProductSpecificationsView.xaml</DependentUpon>
+    <Compile Include="Views\Workspaces\ProdSpecsVM.xaml.cs">
+      <DependentUpon>ProdSpecsVM.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -209,11 +209,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Workspaces\ProductSpecificationAddEditView.xaml">
+    <Page Include="Views\Workspaces\ProdSpecsAddEditView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Workspaces\ProductSpecificationsView.xaml">
+    <Page Include="Views\Workspaces\ProdSpecsVM.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
